tests/snapshots/parser__parser@16_missing_parens.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/16_missing_parens.lang
---
Err:
  UnexpectedToken:
    expected: (
    found: LeftBrace
    pos:
      line: 1
      column: 10
