tests/snapshots/parser__parser@18_invalid_expression.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/18_invalid_expression.lang
---
Err:
  InvalidExpr:
    found: Semicolon
    pos:
      line: 2
      column: 22
