tests/snapshots/parser__parser@20_missing_if_condition.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/20_missing_if_condition.lang
---
Err:
  UnexpectedToken:
    expected: (
    found: LeftBrace
    pos:
      line: 2
      column: 8
