tests/snapshots/parser__parser@21_missing_variable_name.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/21_missing_variable_name.lang
---
Err:
  UnexpectedToken:
    expected: variable name
    found: Colon
    pos:
      line: 2
      column: 9
