tests/snapshots/parser__parser@23_unexpected_top_level.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/23_unexpected_top_level.lang
---
Err:
  InvalidDecl:
    found: Let
    pos:
      line: 1
      column: 1
