tests/snapshots/parser__parser@24_return_no_semicolon.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/24_return_no_semicolon.lang
---
Err:
  InvalidExpr:
    found: RightBrace
    pos:
      line: 3
      column: 1
